Improve downloaded file names by using original media titles